--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,10 +34,10 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 
-security.user.name=admin
-security.user.password=123456
+#security.user.name=admin
+#security.user.password=123456
 
-spring.thymeleaf.cache=false
-spring.freemarker.cache=false
-spring.groovy.template.cache=false
-spring.velocity.cache=false
+#spring.thymeleaf.cache=false
+#spring.freemarker.cache=false
+#spring.groovy.template.cache=false
+#spring.velocity.cache=false
